# sienge-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: consultar_obra.py  pedido_compra.py  relatorio_financeiro.py
sienge/: __init__.py  auth.py  client.py  exceptions.py  rate_limiter.py  utils.py
sienge/endpoints/: __init__.py  base.py  bulk.py  comercial.py  contabilidade.py  credores.py  engenharia.py  financeiro.py  patrimonio.py  suprimentos.py  tabelas.py  webhooks.py
sienge/models/: __init__.py  comercial.py  credores.py  financeiro.py  obra.py  suprimentos.py
tests/: test_models.py  test_utils.py
